--- a/resume.tex
+++ b/resume.tex
@@ -30,10 +30,12 @@
 A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 \runsubsection{Alternate Email}
 rohan.bavishi95@gmail.com\\\\
-\runsubsection{L\MakeTextLowercase{inked}i\MakeTextLowercase{n}}
-\location{|  \href{http://in.linkedin.com/in/rbavishi}{rbavishi}}
-\runsubsection{G\MakeTextLowercase{ithub}}
-\location{|  \href{https://github.com/rbavishi/}{rbavishi}}
+%\runsubsection{L\MakeTextLowercase{inked}i\MakeTextLowercase{n}}
+%\includegraphics[scale=0.4]{linkedin.jpg}
+\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi}}\vspace{0.5ex}
+%\runsubsection{G\MakeTextLowercase{ithub}}
+\includegraphics[scale=0.05]{github.png} 
+\location{|    \href{https://github.com/rbavishi/}{rbavishi}}
 \sectionspace % Some whitespace after the section
 \vspace{-2ex}
 \rule{5cm}{0.5pt}
