Added link for email

--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
 \runsubsection{Address}\\
 A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 \runsubsection{Alternate Email}
-rohan.bavishi95@gmail.com\\\\
+\href{mailto:rohan.bavishi95@gmail.com}{rohan.bavishi95@gmail.com}\\\\
 %\runsubsection{L\MakeTextLowercase{inked}i\MakeTextLowercase{n}}
 %\includegraphics[scale=0.4]{linkedin.jpg}
 \location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi}}\vspace{0.5ex}
