Put the linkedin and github icons side-by-side

--- a/resume.tex
+++ b/resume.tex
@@ -32,10 +32,12 @@ A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 \href{mailto:rohan.bavishi95@gmail.com}{rohan.bavishi95@gmail.com}\\\\
 %\runsubsection{L\MakeTextLowercase{inked}i\MakeTextLowercase{n}}
 %\includegraphics[scale=0.4]{linkedin.jpg}
-\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi}}\vspace{0.5ex}
+%\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi}}\vspace{0.5ex}
 %\runsubsection{G\MakeTextLowercase{ithub}}
-\includegraphics[scale=0.05]{github.png} 
-\location{|    \href{https://github.com/rbavishi/}{rbavishi}}
+%\includegraphics[scale=0.05]{github.png} 
+%\location{|    \href{https://github.com/rbavishi/}{rbavishi}}
+\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi} \hspace{3ex} \includegraphics[scale=0.05]{github.png} | \href{https://github.com/rbavishi/}{rbavishi}}
+
 \sectionspace % Some whitespace after the section
 \vspace{-2ex}
 \rule{5cm}{0.5pt}
