Changed project links look

--- a/resume.tex
+++ b/resume.tex
@@ -155,9 +155,10 @@ Photoshop \textbullet{} MATLAB
 
 \section{Academic Projects}
 
-\runsubsection{Median Algorithms for Disk-Resident Data}\\
+\runsubsection{Median Algorithms for Disk-Resident Data}\vspace{1ex}\small{\hspace{10.5ex}\includegraphics[scale=0.05]{github.png} \hspace{1ex}\href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Project Code}}\\
 
-\location{Aug 2014 – Nov 2014 | Under \href{http://www.cse.iitk.ac.in/users/sbaswana/}{Prof. Surender Baswana} | Report Link : \href{https://drive.google.com/file/d/0B0--s-r8CTxgZTU3RzB3YnhMMVU/view}{Project Report} Repository : \href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Github Link}}\vspace{1ex}
+\location{Aug 2014 – Nov 2014 | Under \href{http://www.cse.iitk.ac.in/users/sbaswana/}{Prof. Surender Baswana} \hspace{12ex} \includegraphics[scale=0.025]{drive.png} \hspace{1ex}\href{https://drive.google.com/file/d/0B0--s-r8CTxgZTU3RzB3YnhMMVU/view}{Project Report}}
+%\location{\hfill \includegraphics[scale=0.05]{github.png} \href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Github Link}\vspace{1ex}}
 Independently developed a 2-pass deterministic and a 2-pass randomized algorithm to find median of large data-sets (1 Terabyte) with performance tests\\\vspace{1ex}
 Deterministic Algorithm :\vspace{1ex}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
@@ -181,7 +182,7 @@ Deterministic Algorithm :\vspace{1ex}
 %------------------------------------------------
 
 \runsubsection{Peer-to-Peer Dropbox}\\
-\location{Aug 2013 – Nov 2013 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} | Github Link : \href{https://github.com/rbavishi/P2P-Dropbox}{P2P Dropbox}}\vspace{1ex}
+\location{Aug 2013 – Nov 2013 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} \hspace{18ex} \includegraphics[scale=0.05]{github.png}  \href{https://github.com/rbavishi/P2P-Dropbox}{P2P Dropbox}}\vspace{1ex}
 A Linux application for back-up and syncing of files between two or more peers
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \footnotesize{
