Fixed spacing between median-heading and location

--- a/resume.tex
+++ b/resume.tex
@@ -155,7 +155,7 @@ Photoshop \textbullet{} MATLAB
 
 \section{Academic Projects}
 
-\runsubsection{Median Algorithms for Disk-Resident Data}\vspace{1ex}\small{\hspace{10.5ex}\includegraphics[scale=0.05]{github.png} \hspace{1ex}\href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Project Code}}\\
+\runsubsection{Median Algorithms for Disk-Resident Data}\location{\hspace{10ex}\includegraphics[scale=0.05]{github.png} \hspace{1ex}\href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Project Code}}
 
 \location{Aug 2014 – Nov 2014 | Under \href{http://www.cse.iitk.ac.in/users/sbaswana/}{Prof. Surender Baswana} \hspace{12ex} \includegraphics[scale=0.025]{drive.png} \hspace{1ex}\href{https://drive.google.com/file/d/0B0--s-r8CTxgZTU3RzB3YnhMMVU/view}{Project Report}}
 %\location{\hfill \includegraphics[scale=0.05]{github.png} \href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Github Link}\vspace{1ex}}
