--- a/resume.tex
+++ b/resume.tex
@@ -182,7 +182,7 @@ Deterministic Algorithm :\vspace{1ex}
 %------------------------------------------------
 
 \runsubsection{Peer-to-Peer Dropbox}\\
-\location{Aug 2013 – Nov 2013 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} \hspace{18ex} \includegraphics[scale=0.05]{github.png}  \href{https://github.com/rbavishi/P2P-Dropbox}{P2P Dropbox}}\vspace{1ex}
+\location{Aug 2013 – Nov 2013 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} \hspace{18ex} \includegraphics[scale=0.05]{github.png} \hspace{1ex} \href{https://github.com/rbavishi/P2P-Dropbox}{P2P Dropbox}}\vspace{1ex}
 A Linux application for back-up and syncing of files between two or more peers
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \footnotesize{
