Modified project links and fixed fine spacing

--- a/resume.tex
+++ b/resume.tex
@@ -30,13 +30,8 @@
 A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 \runsubsection{Alternate Email}
 \href{mailto:rohan.bavishi95@gmail.com}{rohan.bavishi95@gmail.com}\\\\
-%\runsubsection{L\MakeTextLowercase{inked}i\MakeTextLowercase{n}}
-%\includegraphics[scale=0.4]{linkedin.jpg}
-%\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi}}\vspace{0.5ex}
-%\runsubsection{G\MakeTextLowercase{ithub}}
-%\includegraphics[scale=0.05]{github.png} 
-%\location{|    \href{https://github.com/rbavishi/}{rbavishi}}
-\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi} \hspace{3ex} \includegraphics[scale=0.05]{github.png} | \href{https://github.com/rbavishi/}{rbavishi}}
+\location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi} 
+	\hspace{3ex} \includegraphics[scale=0.05]{github.png} \hspace{0.5ex}| \hspace{0.4ex}\href{https://github.com/rbavishi/}{rbavishi}}
 
 \sectionspace % Some whitespace after the section
 \vspace{-2ex}
@@ -155,9 +150,13 @@ Photoshop \textbullet{} MATLAB
 
 \section{Academic Projects}
 
-\runsubsection{Median Algorithms for Disk-Resident Data}\location{\hspace{10ex}\includegraphics[scale=0.05]{github.png} \hspace{1ex}\href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Project Code}}
+\runsubsection{Median Algorithms for Disk-Resident Data}\\\vspace{0.5ex}
 
-\location{Aug 2014 – Nov 2014 | Under \href{http://www.cse.iitk.ac.in/users/sbaswana/}{Prof. Surender Baswana} \hspace{12ex} \includegraphics[scale=0.025]{drive.png} \hspace{1ex}\href{https://drive.google.com/file/d/0B0--s-r8CTxgZTU3RzB3YnhMMVU/view}{Project Report}}
+\location{Aug 2014 – Nov 2014 | Under \href{http://www.cse.iitk.ac.in/users/sbaswana/}{Prof. Surender Baswana} | 
+	\hspace{0.3ex} \includegraphics[scale=0.025]{drive.png} \hspace{0.4ex}\href{https://drive.google.com/file/d/0B0--s-r8CTxgZTU3RzB3YnhMMVU/view}{Report} \hspace{0.3ex}| 
+	\hspace{0.3ex}\includegraphics[scale=0.05]{github.png} \hspace{0.4ex}\href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Code}}
+
+
 %\location{\hfill \includegraphics[scale=0.05]{github.png} \href{https://github.com/rbavishi/Median-Algorithms-Disk-Resident-Data}{Github Link}\vspace{1ex}}
 Independently developed a 2-pass deterministic and a 2-pass randomized algorithm to find median of large data-sets (1 Terabyte) with performance tests\\\vspace{1ex}
 Deterministic Algorithm :\vspace{1ex}
@@ -181,8 +180,10 @@ Deterministic Algorithm :\vspace{1ex}
 \vspace{2ex}
 %------------------------------------------------
 
-\runsubsection{Peer-to-Peer Dropbox}\\
-\location{Aug 2013 – Nov 2013 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} \hspace{18ex} \includegraphics[scale=0.05]{github.png} \hspace{1ex} \href{https://github.com/rbavishi/P2P-Dropbox}{P2P Dropbox}}\vspace{1ex}
+\runsubsection{Peer-to-Peer Dropbox}\\\vspace{0.5ex}
+\location{Aug 2013 – Nov 2013 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} | 
+	\hspace{0.3ex}\includegraphics[scale=0.05]{github.png} \hspace{0.15ex} \href{https://github.com/rbavishi/P2P-Dropbox}{P2P Dropbox}}\vspace{1ex}
+
 A Linux application for back-up and syncing of files between two or more peers
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \footnotesize{
