Modified the coursework format

--- a/resume.tex
+++ b/resume.tex
@@ -42,16 +42,20 @@ A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 % Coursework
 %------------------------------------------------
 
-\section{Coursework (Grade)}
-Fundamentals of Computing (A*)\\
-Data Structures \& Algorithms (A*)\\
-Discrete Mathematics (A)\\
-Introduction to Electronics (A)\\
-Mathematics - Calculus (A)\\
-Mathematics - Linear Algebra (A)\\
-Logic for Computer Science (Ongoing)\\
-Abstract Algebra (Ongoing)\\
-Computer Organisation (Ongoing)\\\vspace{1ex}
+\section{Coursework | Grade}
+\begin{tabular}{l|p{1cm}}
+Fundamentals of Computing & A*\\
+Data Structures \& Algorithms & A*\\
+Discrete Mathematics & A\\
+Introduction to Electronics & A\\
+Mathematics - Calculus & A\\
+Mathematics - Linear Algebra & A\\
+Logic for Computer Science & *\\
+Abstract Algebra & *\\
+Computer Organisation & *\\
+\multicolumn{2}{c}{} \\
+\end{tabular}
+\footnotesize * - Completed by April 2015\\\vspace{0.5ex}
 \runsubsection{\footnotesize Complete Transcript | } \href{https://drive.google.com/file/d/0B0--s-r8CTxgRHdGMm1iRnQxelU/view}{Link}
 \sectionspace % Some whitespace after the section
 \vspace{-1ex}
