Removed line from coursework - too noticeable

--- a/resume.tex
+++ b/resume.tex
@@ -43,7 +43,7 @@ A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 %------------------------------------------------
 
 \section{Coursework | Grade}
-\begin{tabular}{l|p{1cm}}
+\begin{tabular}{lp{1cm}}
 Fundamentals of Computing & A*\\
 Data Structures \& Algorithms & A*\\
 Discrete Mathematics & A\\
