Fixed Institute typo

--- a/resume.tex
+++ b/resume.tex
@@ -128,7 +128,7 @@ Photoshop \textbullet{} MATLAB
 \section{Education}
 
 \runsubsection{B.Tech | Computer Science}
-\descript{| Indian Insitute of Technology, Kanpur}
+\descript{| Indian Institute of Technology, Kanpur}
 
 \location{Expected July 2013 – Aug 2017 | GPA : 10.0/10.0 (Overall)}
 %\vspace{\topsep} % Hacky fix for awkward extra vertical space
