--- a/resume.tex
+++ b/resume.tex
@@ -44,18 +44,19 @@ A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 
 \section{Coursework | Grade}
 \begin{tabular}{lp{1cm}}
-Fundamentals of Computing & A*\\
-Data Structures \& Algorithms & A*\\
-Discrete Mathematics & A\\
-Introduction to Electronics & A\\
-Mathematics - Calculus & A\\
-Mathematics - Linear Algebra & A\\
-Logic for Computer Science & *\\
-Abstract Algebra & *\\
-Computer Organisation & *\\
-\multicolumn{2}{c}{} \\
+Fundamentals of Computing \\
+Data Structures \& Algorithms \\
+Discrete Mathematics \\
+Introduction to Electronics \\
+Mathematics - Calculus \\
+Mathematics - Linear Algebra \\
+Logic for Computer Science \\
+Abstract Algebra \\
+Computer Organisation \\
+\multicolumn{2}{c}{} \\ \\
 \end{tabular}
-\footnotesize * - Completed by April 2015\\\vspace{0.5ex}
+%\footnotesize * - Completed by April 2015
+\\\vspace{0.5ex}
 \runsubsection{\footnotesize Complete Transcript | } \href{https://drive.google.com/file/d/0B0--s-r8CTxgRHdGMm1iRnQxelU/view}{Link}
 \sectionspace % Some whitespace after the section
 \vspace{-1ex}
@@ -130,7 +131,7 @@ Photoshop \textbullet{} MATLAB
 \runsubsection{B.Tech | Computer Science}
 \descript{| Indian Institute of Technology, Kanpur}
 
-\location{Expected July 2013 – Aug 2017 | GPA : 10.0/10.0 (Overall)}
+\location{Expected July 2013 – Aug 2017 | GPA : 9.6/10.0 (Overall)}
 %\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \sectionspace % Some whitespace after the section
 
