--- a/Formatting.cls
+++ b/Formatting.cls
@@ -46,7 +46,7 @@
 
 \newcommand{\namesection}[3]{ % Defines the command for the main heading
 \centering{ % Center the name
-\fontsize{30pt}{50pt} % Font size
+\fontsize{25pt}{50pt} % Font size
 \fontspec[Path = fonts/lato/]{Lato-Lig}\selectfont #1 % First name font
 \fontspec[Path = fonts/lato/]{Lato-Lig}\selectfont #2 % Last name font
 } \\[5pt] % Whitespace between the name and contact information
@@ -74,7 +74,7 @@
 \color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{11pt}{10pt}\selectfont\bfseries\uppercase}{}{0em}{}
 
 \newcommand{\runsubsection}[1]{ % Used for creating subsections where a description is required on the same line
-\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{10pt}{10pt}\selectfont\bfseries\uppercase {#1} \normalfont}
+\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{10pt}{10pt}\selectfont\bfseries {#1} \normalfont}
 
 \newcommand{\descript}[1]{ % Used for describing the subsection either on the same line or underneath
 \color{subheadings}\raggedright\scshape\fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{9pt}{10pt}\selectfont\uppercase {#1 \\} \normalfont}
