Modifying project text

--- a/resume.tex
+++ b/resume.tex
@@ -201,7 +201,7 @@ Ongoing research project in fault localization, using the \href{http://www.cprov
 \runsubsection{DirectFix Implementation in CBMC}\\\vspace{1.1ex}
 \location{May 2015 - July 2015 | Under \href{http://www.cse.iitk.ac.in/users/subhajit/}{Prof. Subhajit Roy} |
   \hspace{0.3ex}\includegraphics[scale=0.05]{github.png} \hspace{0.4ex}\href{https://github.com/rbavishi/iCBMC}{Code}}\vspace{0.5ex}
-Implemented the automated repair algorithm described in the \href{https://www.comp.nus.edu.sg/~abhik/pdf/ICSE15-directfix.pdf}{DirectFix} publication using the model checker CBMC, and the \href{https://github.com/Z3Prover/z3}{Z3} solver for the MaxSAT formulation.\vspace{2.5ex}
+Implemented the automated repair algorithm, from scratch, described in the \href{https://www.comp.nus.edu.sg/~abhik/pdf/ICSE15-directfix.pdf}{DirectFix} publication using the model checker CBMC, and the \href{https://github.com/Z3Prover/z3}{Z3} solver for the MaxSAT formulation.\vspace{2.5ex}
 \footnotesize {
   \begin{tightitemize}
   \item Added multiple modules in CBMC to use the trace formula to generate the \href{http://dl.acm.org/citation.cfm?id=1806833}{component based encoding (CBE)} to be passed as an SMT-Lib formula to Z3.
