Added homepage url

--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,7 @@
 
 
 \namesection{Rohan}{Bavishi}{ 
-  \color{subheadings} Third-Year Undergraduate, \ IIT Kanpur | \href{mailto:rbavishi@iitk.ac.in}{rbavishi@iitk.ac.in} | \color{subheadings}\small+91-77-528-46562 
+  \color{subheadings} Third-Year Undergraduate, \ IIT Kanpur | \href{mailto:rbavishi@iitk.ac.in}{rbavishi@iitk.ac.in} | \color{subheadings}\small+91-77-528-46562 | \href{http://home.iitk.ac.in/~rbavishi/}{home.iitk.ac.in/\textasciitilde rbavishi}
 }
 
 %----------------------------------------------------------------------------------------
@@ -31,8 +31,7 @@ A-302, Hall-2, IIT Kanpur\\Kanpur, Uttar Pradesh\\\\
 \runsubsection{Alternate Email}
 \href{mailto:rohan.bavishi95@gmail.com}{rohan.bavishi95@gmail.com}\\\\
 \location{\includegraphics[scale=0.06]{linkedin.png} \hspace{0.7ex}| \href{http://in.linkedin.com/in/rbavishi}{rbavishi} 
-	\hspace{3ex} \includegraphics[scale=0.05]{github.png} \hspace{0.5ex}| \hspace{0.4ex}\href{https://github.com/rbavishi/}{rbavishi}}
-
+  \hspace{3ex} \includegraphics[scale=0.05]{github.png} \hspace{0.5ex}| \hspace{0.4ex}\href{https://github.com/rbavishi/}{rbavishi}}
 \sectionspace % Some whitespace after the section
 \vspace{-2ex}
 \rule{5cm}{0.5pt}
