--- a/Simple/resume.tex
+++ b/Simple/resume.tex
@@ -67,6 +67,7 @@
 %	NAME AND ADDRESS SECTION
 %-------------------------------------------------------------------------------
 \name{Rohan Bavishi}
+\qualification{Senior Undergraduate, Computer Science, IIT Kanpur}
 \emailone{rbavishi@iitk.ac.in}
 \emailtwo{rohan.bavishi95@gmail.com}
 \website{http://home.iitk.ac.in/~rbavishi}{\url{home.iitk.ac.in/~rbavishi}}
@@ -88,48 +89,26 @@
 %-------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %-------------------------------------------------------------------------------
-\section{EDUCATION}
-\textbf{Santa Clara University}, Santa Clara, CA\\
-{\sl Master of Science}, Computer Science and Engineering, June 2015\hfill GPA: 
-3.67
-\\
-{\sl Bachelor of Science}, Computer Science and Engineering, June 2014\hfill 
-GPA: 3.47
-%\moveleft\hoffset\vbox{\hrule width\textwidth}
+\section{Education}
+\cusemph{Indian Institute of Technology Kanpur}, Uttar Pradesh, India\\
+{\sl Bachelor of Technology}, Computer Science and Engineering, \timeline{Jul' 13 - Jul' 17}\\
+\cusemph{GPA: 9.7/10} (Overall)\\
 \sectionline
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 %	PROJECTS SECTION
 %-------------------------------------------------------------------------------
-\section{PROJECTS}
+\section{Research\\Interests}
 \par
-\textbf{Project One}: 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper 
-vulputate vestibulum. Pellentesque viverra orci vitae dolor ultrices, eu semper 
-ex blandit. 
+Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler Optimizations, Decision Procedures
 
-\par
-\textbf{Project Two}:
-Nunc quis diam non sem tempus ornare. Nullam eleifend ligula varius 
-elementum pharetra. Donec fringilla quis mauris quis tristique. Vestibulum ac 
-accumsan quam, a semper mauris. 
-\par
-\textbf{Project Three}: 
-Pellentesque urna odio, euismod id nibh ut,  lobortis eleifend odio. Sed 
-placerat arcu pulvinar dictum egestas. Vivamus  scelerisque commodo urna sit 
-amet imperdiet. Fusce ac sodales quam.
+\section{Publications}
+\cusemph{Rohan Bavishi}, Awanish Pandey, Subhajit Roy, \textit{To Be Precise : Regression Aware Debugging} \\\cusemph{OOPSLA 2016} (To Appear), Amsterdam, Netherlands
 
-\par
-\textbf{Project Four}: 
-Integer mattis erat nec tortor fermentum mollis. Donec sit amet justo vitae 
-tellus pharetra tempor et nec metus. Nam et consequat dui, convallis laoreet 
-libero. 
+\section{Research\\Projects}
+Yello!\\
 
-\par
-\textbf{Project Five}: 
-Phasellus eu imperdiet purus. Maecenas id purus leo. Nulla quis purus varius, 
-imperdiet mauris at, pellentesque erat. 
 
 \sectionline
 %-------------------------------------------------------------------------------
@@ -137,16 +116,16 @@ imperdiet mauris at, pellentesque erat.
 %-------------------------------------------------------------------------------
 %	COMPUTER SKILLS SECTION
 %-------------------------------------------------------------------------------
-\section{COMPUTER\\SKILLS}
+\section{Computer\\Skills}
 
-\textbf{Languages}: C, C++, Java, ML, Perl, Bash, Assembly, SQL, \LaTeX.
+\cusemph{Languages}: C, C++, Java, ML, Perl, Bash, Assembly, SQL, \LaTeX.
 \\
-\textbf{Web Development}: HTML, CSS, JavaScript, PHP, Apache, IIS, ASP.NET.
+\cusemph{Web Development}: HTML, CSS, JavaScript, PHP, Apache, IIS, ASP.NET.
 \\
-\textbf{Applications}: Vi/Vim, Eclipse, Visual Studio, Git, VMWare, VirtualBox, 
+\cusemph{Applications}: Vi/Vim, Eclipse, Visual Studio, Git, VMWare, VirtualBox, 
 MySQL, Oracle 11g.
 \\
-\textbf{Operating Systems}: 
+\cusemph{Operating Systems}: 
 Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
 \\
 \sectionline
@@ -163,11 +142,11 @@ Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
 \end{format}
 %-------------------------------------------------------------------------------
 
-\section{EXPERIENCE}
+\section{Experience}
 \employer{Employer One}
 \location{Location One}
 \dates{Dates One}
-\title{\textbf{Title One}}
+\title{\cusemph{Title One}}
 \begin{position}
 Vivamus ullamcorper a lacus non laoreet. Etiam ultricies in est quis finibus. 
 Curabitur posuere est quis felis sodales, vitae aliquam ex consequat. In non 
@@ -177,7 +156,7 @@ magna felis.
 \employer{Employer One}
 \location{Location One}
 \dates{Dates One}
-\title{\textbf{Title One}}
+\title{\cusemph{Title One}}
 \begin{position}
 Donec venenatis volutpat tortor, quis fringilla turpis ornare et. Curabitur 
 neque enim, facilisis vitae lacus non, malesuada volutpat tortor. Etiam 
@@ -188,7 +167,7 @@ neque, vel facilisis nunc.
 \employer{Employer One}
 \location{Location One}
 \dates{Dates One}
-\title{\textbf{Title One}}
+\title{\cusemph{Title One}}
 \begin{position}
 Mauris lacinia tellus vel elit lobortis, ut convallis tellus euismod. Praesent 
 sagittis magna non nisl rutrum, dapibus mollis ante commodo. Donec scelerisque 
@@ -202,7 +181,7 @@ luctus dictum justo vitae dictum.
 %-------------------------------------------------------------------------------
 %	Interests
 %-------------------------------------------------------------------------------
-\section{INTERESTS}
+\section{Interests}
 Interest One, Interest Two, Interest Three, Interest Four, ...Et Cetera.
 %-------------------------------------------------------------------------------
 \end{resume}
